service.yml
apiVersion: v1
kind: Service
metadata:
  name: cpic-navigation-service
  namespace: eeanalytics-prod
spec:
  ports:
  - name: angular
    port: 3000
    protocol: TCP
    targetPort: 4400
  selector:
    io.kompose.service: cpic-navigation-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
